# ai-zk-verifier

./: README.md  requirements.txt  test.py  train.py
ai-inference/host/: Cargo.toml
ai-inference/host/src/: lib.rs
ai-inference/methods/guest/: Cargo.toml
hello/: Cargo.toml
hello/src/: main.rs
model/: format_onnx.py  requirements.txt  summary.py  test.py  train.py
multiply/host/: Cargo.toml
multiply/host/src/: lib.rs
multiply/methods/guest/: Cargo.toml
risc0/host/src/: main.rs
risc0/methods/guest/: Cargo.toml
